# SudORku

./: 1sol.cpp  CMakeLists.txt  input2.txt  input3.txt  input4.txt  inputv4.txt  main.cpp  nhap.txt  output.txt  test.txt  test2.txt  test3.txt
